# wsmq

./: .gitignore  README.md
js/: canva.html  client.js  dashboard.html  image_stream.js  index.html  kart.html  kart.js  package-lock.json  server.js  tensor.js  test.js
python/: README.md  pyproject.toml
python/src/wsmq/: __init__.py  client.py  config.py  display.py  image_stream.py  server.py
python/tests/: test_client.py  test_image_stream.py  test_image_stream_pub.py  test_image_stream_sub.py
