[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsmq"
version = "0.0.1"
authors = [
    { name="timcsy", email="timocsy@yahoo.com.tw" },
]
description = "Simple WebSocket Message Queue using simple MQTT format"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/timcsy/wsmq"
"Bug Tracker" = "https://github.com/timcsy/wsmq/issues"

[project.scripts]
wsmq = "wsmq.server:run"